@@ -39,6 +39,8 @@ int main(int argc, char **argv)
 
 	app.setQuitOnLastWindowClosed(true);
 	app.setApplicationVersion(VERSION);
+	app.processEvents();
+
 	data.parser.addHelpOption();
 	data.parser.addVersionOption();
 	data.parser.addOptions(
@@ -54,7 +56,7 @@ int main(int argc, char **argv)
 			{"multiple","Select multiple items ( lists )."},
 			{"btntoerr","Print button to stderr."},
 			{"buttons","Buttons ( for info boxes ).","Ok"},
-			{"type","Box Type ( no type will display aboutbox for Qt )\n\nTypes are:\nabout aboutqt query info warn fatal input getitem form list textfile imagefile colour font text tailbox notepad richtext.\nMore info and examples here:\nhttps://keithdhedger.github.io/pages/yadqt/yadqt.html","aboutqt"},
+			{"type","Box Type ( no type will display aboutbox for Qt )\n\nTypes are:\nabout aboutqt query info warn fatal input getitem form list textfile imagefile colour font text tailbox notepad richtext openfile savefile.\nMore info and examples here:\nhttps://keithdhedger.github.io/pages/yadqt/yadqt.html","aboutqt"},
 	});
 
 	app.setWindowIcon(QIcon::fromTheme("user-info"));
@@ -167,6 +169,14 @@ int main(int argc, char **argv)
 						break;
 					case RICHTEXT:
 						orphans.richText();
+						break;
+						break;
+//files
+					case OPENFILE:
+						orphans.openFile();
+						break;
+					case SAVEFILE:
+						orphans.saveFile();
 						break;
 				}
 		}
