@@ -1,4 +1,5 @@
 0.1.1
+Added openfile/savefile types.
 Added 'Home' to richtext viewer.
 Update to README.
 Added 'Refresh' button to richtext viewer.
